--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,17 +42,8 @@ padding: 5px
 	transform: skew(-5deg);
 }
 
-.modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: #6B2F2F; /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+.critical {
+	color: #F62020;
 }
 
 
